fix mobile menu overflow
UDS-1285

--- a/@utahdts/utah-design-system/css/6-components/base-components/navigation/_side-panel-navigation.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/navigation/_side-panel-navigation.scss
@@ -28,6 +28,8 @@
       &__title {
         a {
           flex: 1 0 auto;
+          max-width: 100%;
+          box-sizing: border-box;
           padding: var(--spacing-2xs) var(--spacing);
           display: block;
           border-radius: var(--radius-circle);
